vnext
Update navcontainerhelper welcome text with some missing functions

0.2.9.7
Bugfix: docker restart caused Windows Client deployed by -includeCSide to loose ACSUri setting

0.2.9.6
Rewrote Create-AadAppsForNAV to use AzureAD powershell package instead or AzureRM
Added function Create-AadUsersInNavContainer

0.2.9.5
Add generatesymbolreference=1 when Importing objects using Import-ObjectsToNavContainer or ImportTestToolkitToNavContainer

0.2.9.4
Set license to NULL from dbo.[dbproperty] and dbo.[tenantproperty] tables when exporting databases to bacpac

0.2.9.3
Use containername for hosts file when using -updatehosts (like remove-navcontainer)
Added parameter isolation to new-navcontainer to allow Windows Server to use hyperv isolation
Fixed a number of ScriptAnalyzer errors/warnings in NavContainerHelper
Empty the dbo.[Tenant License State] table when exporting databases to bacpac

0.2.9.1
Added function Backup-NavContainerDatabases
Added function New-CompanyInNavContainer (thanks Mike Glue)
Added function Remove-CompanyInNavContainer (thanks Mike Glue)
Added function Import-ConfigPackageInNavContainer.ps1 (thanks Mike Glue)
Added function Remove-ConfigPackageInNavContainer.ps1 (thanks Mike Glue)
Added function Get-NavContainerServerConfiguration (thanks Richard Robberse)
In Get-NavContainerPath - if you start the path with a colon (:), then the path refers to a path inside the container and not a shared folder
Bugfix: Create-AadAppsForNav required reboot after setup

0.2.9.0
Added tenant parameter (0..many tenants) to Export-NavContainerDatabasesAsBacpac
Object handling functions will not ask for credentials if not specified
BugFix: doNotOpen in Get-NavContainerEventLog was string - should be switch
Compile-AppInNavContainer had a dependency on the WebClient, this dependency is removed
BufFix: Compile-AppInNavContainer did not work on multitenant containers
BugFix: New-NavContainer will not crash when running the generic image with a NAV 2013 DVD