@@ -1,5 +1,11 @@
 vnext
 Update navcontainerhelper welcome text with some missing functions
+Added function Stop-NavContainer
+Added function Start-NavContainer
+Added function Restart-NavContainer
+Added function New-LetsEncryptCertificate
+Added function Renew-LetsEncryptCertificate
+Bugfix: Invoke-NavContainerCodeunit fails if the user already exists
 
 0.2.9.7
 Bugfix: docker restart caused Windows Client deployed by -includeCSide to loose ACSUri setting
